--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <%= htmlWebpackPlugin.options.title %>
   </title>
   <script type="text/javascript"
-    src="https://webapi.amap.com/maps?v=1.4.15&key=eb34eb637f271e0e1d2c36267417dae5&plugin=AMap.MapType">
+    src="https://webapi.amap.com/maps?v=1.4.15&key=eb34eb637f271e0e1d2c36267417dae5&plugin=AMap.MapType,AMap.Autocomplete,AMap.PlaceSearch">
     </script>
 </head>
 
