--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,12 @@
   <script type="text/javascript"
     src="https://webapi.amap.com/maps?v=1.4.15&key=eb34eb637f271e0e1d2c36267417dae5&plugin=AMap.MapType,AMap.Autocomplete,AMap.PlaceSearch">
     </script>
+
+  <style>
+    .amap-sug-result {
+      z-index: 999999999999;
+    }
+  </style>
 </head>
 
 <body>
